Release 1.5 (in development)
============================

Incompatible changes
--------------------

* LaTeX package fancybox is not longer a dependency of sphinx.sty

Features added
--------------

* Add ``:caption:`` option for sphinx.ext.inheritance_diagram.
* #894: Add ``lualatexpdf`` and ``xelatexpdf`` as a make target to build PDF using lualatex or xelatex

Bugs fixed
----------

Documentation
-------------


Release 1.4.2 (in development)
==============================

Features added
--------------

* Now :confval:`suppress_warnings` accepts following configurations: ``app.add_node``, ``app.add_directive``, ``app.add_role`` and ``app.add_generic_role`` (ref: #2451)
* LaTeX writer allows page breaks in topic contents; and their horizontal
  extent now fits in the line width (shadow in margin). Warning-type
  admonitions allow page breaks (if very long) and their vertical spacing
  has been made more coherent with the one for Hint-type notices.

Bugs fixed
----------

* #2370: the equations are slightly misaligned in LaTeX writer
* #1817, #2077: suppress pep8 warnings on conf.py generated by sphinx-quickstart
* #2407: building docs crash if document includes large data image URIs
* #2436: Sphinx does not check version by :confval:`needs_sphinx` if loading extensions failed
* #2397: Setup shorthandoff for turkish documents
* #2447: VerbatimBorderColor wrongly used also for captions of PDF
* #2456: C++, fix crash related to document merging (e.g., singlehtml and Latex builders).
* #2446: latex(pdf) sets local tables of contents (or more generally topic nodes) in unbreakable boxes, causes overflow at bottom


Release 1.4.1 (released Apr 12, 2016)
=====================================

Incompatible changes
--------------------

* The default format of `today_fmt` and `html_last_updated_fmt` is back to
  strftime format again.  Locale Date Markup Language is also supported for
  backward compatibility until Sphinx-1.5.

Translations
------------
